config/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deno-app
  namespace: apps
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: deno-app
  template:
    metadata:
      name: deno-app
      labels:
        k8s-app: deno-app
    spec:
      containers:
        - name: deno-app
          image: <IMAGE>
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
  minReadySeconds: 5
