config/service.yml
kind: Service
apiVersion: v1
metadata:
  name: deno-app
  namespace: apps
  labels:
    k8s-app: deno-app
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    k8s-app: deno-app
  type: ClusterIP
  ipFamilyPolicy: SingleStack
