config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deno-ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: "app.ostepopp.site"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: deno-app
                port:
                  number: 80
